name:                telegram-hoogle-bot
version:             0.1.0.0
synopsis:            Telegram Hoogle Bot
description:         Please see README.md
homepage:            https://github.com/asvyazin/telegram-hoogle-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Svyazin
maintainer:          guybrush@live.ru
copyright:           2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable telegram-hoogle-bot
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Hoogle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , conduit
                     , conduit-combinators
                     , errors
                     , exceptions
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , stm
                     , telegram-api
                     , text
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asvyazin/telegram-hoogle-bot
